--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -34,10 +37,65 @@
     <!-- <h3>Hello world</h3>
     </div> -->
 
-    <h3>Hello world</h3>
+    <!-- <h3>Hello world</h3> -->
+    <header class="header">
+        <div class="container">
+            <nav class="header-nav">
+                <a href="">Logo</a>
+                    <ul class="menu">
+                        <li>
+                            <a href="">menu</a>
+                        </li>
+                        <li>
+                            <a href="">menu</a>
+                        </li>
+                        <li>
+                            <a href="">menu</a>
+                        </li>
+                    </ul>
+            </nav>
+            <a href="" class="button">Дізнатись більше</a>
+        </div>
+    </header>
 
-    
+    <section class="images">
+        <div class="container">
+            <div class="images-box">
+                <img src="img/image5.jpg" alt="" width="300">
+                <img src="img/image6.jpg" alt="" width="390">
+                <img src="img/image4.jpg" alt="" width="282">
+            </div>
+        </div>
+    </section>
+
+    <section class="text">
+        <div class="container">
+            <p>
+            Всесвіт Marvel (англ. Marvel Universe) — це вигаданий всесвіт, у якому відбуваються події та сюжети більшості американських коміксів та деяких інших засобів масової медіа, опублікованих Marvel Entertainment. Команди супергероїв, такі як: Месники, Люди Ікс, Фантастична четвірка, Вартові галактики, Захисники, Нелюди; та інші супергерої Marvel, які живуть у цьому всесвіті: Людина-павук, Капітан Америка, Залізна людина, Тор, Шибайголова, Галк, Росомаха, Каратель, Місячний лицар, Дедпул, Блейд, Примарний вершник, Доктор Стрендж та багато інших.
+            </p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <nav class="footer-nav">
+                <a href="">Logo</a>
+                    <ul class="menu">
+                        <li>
+                            <a href="">menu</a>
+                        </li>
+                        <li>
+                            <a href="">menu</a>
+                        </li>
+                        <li>
+                            <a href="">menu</a>
+                        </li>
+                    </ul>
+            </nav>
+        </div>
+    </footer>
 
 </body>
 
 </html>
+
